added a git ignore file and removed bower_components

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<p>OS: {{ product.operatingSystem }}</p>
 							<p>Screensize: 15.6 inches</p>
 							<p>WiFi Type: 802.11b/g/n</p>
-							<pre>{{key}}</pre>
+							<!-- <pre>{{key}}</pre> -->
 							<hr>
 							<span> 
 								  <div ng-repeat="(key, data) in reviews[$index]">User:{{ data.user }} | Comment:{{ data.comment }} | Rating:{{ data.rating }}</div>
